fix: #WB2-1193, fix overflow issue with search engine

--- a/packages/bootstrap/scss/components/_dropdown.scss
+++ b/packages/bootstrap/scss/components/_dropdown.scss
@@ -40,13 +40,9 @@
   &-menu {
     position: absolute;
     top: 100%;
-    min-width: 100%;
-    max-height: 32rem;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
     gap: $spacer-4;
-    // transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
     > .dropdown-item {
       &:first-child {
@@ -77,6 +73,7 @@
     background: transparent;
     border: 1px solid var(--#{$prefix}gray-400);
     border-radius: $border-radius;
+    line-height: 1.5;
     transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
     @include background-color-to(var(--#{$prefix}gray-200));
@@ -130,7 +127,12 @@
 
       &.focus {
         background-color: var(--#{$prefix}gray-200);
-        border: 1px solid var(--#{$prefix}gray-400);
+        outline: 1px solid var(--#{$prefix}gray-400);
+        outline-offset: -1px;
+      }
+
+      &.md {
+        line-height: 1.4;
       }
 
       &.selected {
@@ -159,6 +161,13 @@
     &.lg {
       padding: $spacer-12 $spacer-16;
       border-radius: $input-border-radius-lg;
+    }
+  }
+
+  &.overflow {
+    .dropdown-menu {
+      max-height: 32rem;
+      overflow-y: auto;
     }
   }
 }
